[gd_scene load_steps=5 format=3 uid="uid://bryv71qaxdyfo"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_ckygx"]
[ext_resource type="Texture2D" uid="uid://y83b7odomixn" path="res://assets/title.jpg" id="2_c1y7o"]
[ext_resource type="PackedScene" uid="uid://8tw50v3p23py" path="res://scenes/black.tscn" id="3_aibbq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6cyo3"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.886275)

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_ckygx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -280.0
offset_right = 141.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6cyo3")
text = "Start Game"

[node name="HowToButt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "How to Play"

[node name="QuitButt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="MainTitle" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.1
anchor_bottom = 0.1
offset_right = 1280.0
offset_bottom = 128.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Delicious Sums"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MainTitle"]
layout_mode = 0
offset_left = 7.0
offset_top = 97.0
offset_right = 1287.0
offset_bottom = 123.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "A game about dim sum for Ludum Dare 54: Limited Space"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.63
anchor_top = 0.61
anchor_right = 0.7
anchor_bottom = 0.9
offset_right = 144.0
offset_bottom = 216.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[b]Game Design & 
Development[/b]

chicken nugget
PointBlanket
MagicHatJo
mDuo13

[font_size=10][i]made in Godot[/i][/font_size]"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_c1y7o")
expand_mode = 1

[node name="Black" parent="." instance=ExtResource("3_aibbq")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="VBoxContainer/StartButt" to="." method="_on_start_butt_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToButt" to="." method="_on_how_to_butt_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButt" to="." method="_on_quit_butt_pressed"]
